--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:coverage": "jest --coverage",
     "lint": "eslint bin/ src/ tests/",
     "lint:fix": "eslint bin/ src/ tests/ --fix",
-    "format": "prettier --write bin/ src/ tests/"
+    "format": "prettier --write bin/ src/ tests/",
+    "format:check": "prettier --check bin/ src/ tests/"
   },
   "keywords": [
     "specification-driven-development",
