fix(ci): use npm run format:check instead of prettier --check .
- Replace 'npx prettier --check .' with 'npm run format:check'
- Only check JavaScript files (bin/, src/, tests/)
- Avoid checking markdown/json files in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run lint
-      - name: Check formatting
-        run: npx prettier --check .
+      - run: npm run format:check
 
   test:
     name: Jest Tests
