feat: Implement automated onboarding system (Phase 3)
Implements Phase 3 from roadmap: Onboarding Automation (v0.3.0)

## New Command: musubi-onboard

Added `musubi-onboard` CLI command for automated project analysis and MUSUBI integration.

### Features:

1. **Automated Codebase Analysis**:
   - Detects project configuration (package.json, pyproject.toml, etc.)
   - Analyzes directory structure and architecture patterns
   - Identifies technology stack (languages, frameworks, tools)
   - Extracts business context from README

2. **Intelligent Detection**:
   - Package managers: npm, poetry, cargo, go
   - Architecture patterns: feature-first, component-based, DDD, service-layer
   - Languages: JavaScript, TypeScript, Python, Rust, Go, Java, Ruby
   - Frameworks: React, Vue, Next.js, Jest, ESLint, Vite, etc.

3. **Automated Generation**:
   - steering/project.yml (12 sections, auto-populated)
   - steering/structure.md + .ja.md (bilingual architecture docs)
   - steering/tech.md + .ja.md (bilingual tech stack docs)
   - steering/product.md + .ja.md (bilingual product docs)
   - steering/memories/ (6 memory files from templates)

4. **Template System**:
   - Memory templates in src/templates/memories/
   - Variable replacement: {{PROJECT_NAME}}, {{DATE}}, {{PACKAGE_MANAGER}}
   - Bilingual generation for all documentation

5. **User Experience**:
   - Interactive confirmation before generation
   - --auto-approve flag for CI/CD
   - --skip-memories flag for minimal setup
   - Clear progress indicators throughout
   - Graceful degradation for unusual projects

### Usage:

```bash
# Onboard current directory
musubi-onboard

# Onboard specific project
musubi-onboard /path/to/project

# Auto-approve (skip confirmation)
musubi-onboard --auto-approve

# Skip memory initialization
musubi-onboard --skip-memories
```

### Files Created:

- bin/musubi-onboard.js (~600 lines)
  - Project configuration detection
  - Directory structure analysis
  - Technology stack detection
  -

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "bin": {
     "musubi-sdd": "bin/musubi.js",
     "musubi": "bin/musubi.js",
-    "musubi-init": "bin/musubi-init.js"
+    "musubi-init": "bin/musubi-init.js",
+    "musubi-onboard": "bin/musubi-onboard.js"
   },
   "scripts": {
     "test": "jest",
@@ -41,6 +42,7 @@
     "chalk": "^4.1.2",
     "commander": "^11.0.0",
     "fs-extra": "^11.0.0",
+    "glob": "^10.0.0",
     "inquirer": "^9.0.0"
   },
   "devDependencies": {
