chore: Update steering docs (musubi-sync v0.6.1)
Auto-detected changes:
- Version: 0.5.1 → 0.6.1
- Languages: Added javascript, typescript, python, rust, go, java, ruby
- Directories: Added tests, templates, storage, orchestrator, docs, coverage, bin, References

Updated by musubi-sync command

--- a/steering/project.yml
+++ b/steering/project.yml
@@ -2,8 +2,15 @@ project_name: musubi-sdd
 description: >-
   Ultimate Specification Driven Development Tool with 25 Agents for 7 AI Coding Platforms (Claude
   Code, GitHub Copilot, Cursor, Gemini CLI, Windsurf, Codex, Qwen Code)
-version: 0.5.1
-languages: []
+version: 0.6.1
+languages:
+  - javascript
+  - typescript
+  - python
+  - rust
+  - go
+  - java
+  - ruby
 frameworks:
   - name: Jest
     version: detected
