--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "musubi-sdd",
-  "version": "0.6.1",
+  "version": "0.7.0",
   "description": "Ultimate Specification Driven Development Tool with 25 Agents for 7 AI Coding Platforms (Claude Code, GitHub Copilot, Cursor, Gemini CLI, Windsurf, Codex, Qwen Code)",
   "main": "src/index.js",
   "bin": {
@@ -10,7 +10,8 @@
     "musubi-onboard": "bin/musubi-onboard.js",
     "musubi-sync": "bin/musubi-sync.js",
     "musubi-analyze": "bin/musubi-analyze.js",
-    "musubi-share": "bin/musubi-share.js"
+    "musubi-share": "bin/musubi-share.js",
+    "musubi-validate": "bin/musubi-validate.js"
   },
   "scripts": {
     "test": "jest",
