feat: Add Task Breakdown System (v0.8.4)
- Added musubi-tasks CLI with 6 commands:
  - init <feature> - Initialize task breakdown document
  - add <title> - Add task with interactive prompts
  - list - List all tasks with filtering
  - update <id> <status> - Update task status
  - validate - Validate task completeness
  - graph - Generate dependency graph
- Implemented TasksGenerator with task management:
  - P0-P3 priority system for sprint planning
  - Story points (Fibonacci: 1/2/3/5/8/13)
  - Task auto-numbering (TASK-001, TASK-002, etc.)
  - Dependency management with graph visualization
  - Parallel execution planning with critical path
  - Task validation (required fields, Test-First checklist)
- 19 new tests (159 total passing)
- Updated package.json (v0.8.3 -> v0.8.4)
- Updated CHANGELOG.md, README.md, README.ja.md

Phase 1 status: Priority 4 (P1) complete - Task Breakdown operational

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "musubi-sdd",
-  "version": "0.8.3",
+  "version": "0.8.4",
   "description": "Ultimate Specification Driven Development Tool with 25 Agents for 7 AI Coding Platforms (Claude Code, GitHub Copilot, Cursor, Gemini CLI, Windsurf, Codex, Qwen Code)",
   "main": "src/index.js",
   "bin": {
@@ -13,7 +13,8 @@
     "musubi-share": "bin/musubi-share.js",
     "musubi-validate": "bin/musubi-validate.js",
     "musubi-requirements": "bin/musubi-requirements.js",
-    "musubi-design": "bin/musubi-design.js"
+    "musubi-design": "bin/musubi-design.js",
+    "musubi-tasks": "bin/musubi-tasks.js"
   },
   "scripts": {
     "test": "jest",
