--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "musubi-sdd",
-  "version": "0.8.5",
+  "version": "0.8.6",
   "description": "Ultimate Specification Driven Development Tool with 25 Agents for 7 AI Coding Platforms (Claude Code, GitHub Copilot, Cursor, Gemini CLI, Windsurf, Codex, Qwen Code)",
   "main": "src/index.js",
   "bin": {
@@ -15,7 +15,8 @@
     "musubi-requirements": "bin/musubi-requirements.js",
     "musubi-design": "bin/musubi-design.js",
     "musubi-tasks": "bin/musubi-tasks.js",
-    "musubi-trace": "bin/musubi-trace.js"
+    "musubi-trace": "bin/musubi-trace.js",
+    "musubi-change": "bin/musubi-change.js"
   },
   "scripts": {
     "test": "jest",
