feat(v2.0.0): Add CodeGraph MCP setup to Orchestrator
- Add CodeGraph MCP Server Integration section to orchestrator SKILL.md
- Include 4 installation options (Python venv, Claude Code, VS Code, Claude Desktop)
- Document 12 MCP tools with agent mapping
- Add project indexing and analysis workflow examples
- Update steering files with Orchestrator MCP capabilities
- Add CodeGraph analysis summary to structure.md (1006 entities, 36 communities)
- Update CHANGELOG.md with Orchestrator MCP setup guide
- Mark CodeGraph MCP Server Integration as completed in product.md

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "musubi-sdd",
-  "version": "1.1.2",
-  "description": "Ultimate Specification Driven Development Tool with 25 Agents for 7 AI Coding Platforms (Claude Code, GitHub Copilot, Cursor, Gemini CLI, Windsurf, Codex, Qwen Code)",
+  "version": "2.0.0",
+  "description": "Ultimate Specification Driven Development Tool with 25 Agents for 7 AI Coding Platforms + MCP Integration (Claude Code, GitHub Copilot, Cursor, Gemini CLI, Windsurf, Codex, Qwen Code)",
   "main": "src/index.js",
   "bin": {
     "musubi-sdd": "bin/musubi.js",
