feat: v2.0.7 - CodeGraph MCP setup automation & npm OIDC migration
- Add CodeGraph MCP Server installation/setup prompts
- Add setup-codegraph.md for automated CodeGraph configuration
- Update AGENTS.md with CodeGraph setup trigger phrases
- Migrate npm publishing to Trusted Publishing (OIDC)
- Remove NPM_TOKEN dependency from GitHub Actions
- Update steering docs (structure, tech, product) to v2.0.7
- Update CodeGraph statistics in steering docs
- Add CodeGraph commands to suggested_commands.md

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,7 +36,5 @@ jobs:
       - name: Run lint
         run: npm run lint
 
-      - name: Publish to npm
+      - name: Publish to npm (Trusted Publishing with OIDC)
         run: npm publish --provenance --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
