--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,9 @@ jobs:
     name: Publish to npm
     runs-on: ubuntu-latest
     needs: verify
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - uses: actions/checkout@v4
       
@@ -49,10 +52,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
-      - name: Publish to npm
+      - name: Publish to npm (Trusted Publishing with OIDC)
         run: npm publish --provenance
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   create-github-release:
     name: Create GitHub Release
