--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,5 +36,7 @@ jobs:
       - name: Run lint
         run: npm run lint
 
-      - name: Publish to npm (Trusted Publishing with OIDC)
+      - name: Publish to npm
         run: npm publish --provenance --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
