--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,8 +52,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
-      - name: Publish to npm (Trusted Publishing with OIDC)
+      - name: Publish to npm
         run: npm publish --provenance
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   create-github-release:
     name: Create GitHub Release
