feat: v2.1.0 - Workflow Engine & Enhanced SDD Stages
## New Features

### Workflow Engine CLI (musubi-workflow)
- init: Initialize workflow for a feature
- status: Show current workflow status
- next: Transition to next stage
- feedback: Record feedback loops
- complete: Complete workflow with summary
- history: View workflow history
- metrics: Show metrics summary

### New SDD Stages
- Stage 0: Spike/PoC - Research and prototyping
- Stage 5.5: Code Review - Structured review process
- Stage 9: Retrospective - Continuous improvement

### Workflow Features
- State management in storage/workflow-state.yml
- Metrics collection (time, iterations, feedback loops)
- Enforced stage transitions with validation
- Stage validation checklists

## New Files
- src/managers/workflow.js
- bin/musubi-workflow.js
- steering/rules/stage-validation.md
- tests/managers/workflow.test.js (13 tests)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "musubi-sdd",
-  "version": "2.0.7",
+  "version": "2.1.0",
   "description": "Ultimate Specification Driven Development Tool with 25 Agents for 7 AI Coding Platforms + MCP Integration (Claude Code, GitHub Copilot, Cursor, Gemini CLI, Windsurf, Codex, Qwen Code)",
   "main": "src/index.js",
   "bin": {
@@ -17,7 +17,8 @@
     "musubi-tasks": "bin/musubi-tasks.js",
     "musubi-trace": "bin/musubi-trace.js",
     "musubi-gaps": "bin/musubi-gaps.js",
-    "musubi-change": "bin/musubi-change.js"
+    "musubi-change": "bin/musubi-change.js",
+    "musubi-workflow": "bin/musubi-workflow.js"
   },
   "scripts": {
     "test": "jest",
