feat(REQ-P1-001): add Browser Automation Agent
- Add BrowserAgent class with Playwright integration
- Implement NL Parser for Japanese/English browser commands
  - navigate, click, fill, select, wait, screenshot, assert
- Add ActionExecutor for Playwright API calls
- Add ContextManager for browser sessions and history
- Add ScreenshotCapture for screenshot management
- Add AIComparator for Vision AI screenshot comparison
- Add TestGenerator for Playwright/Jest test code generation
- Add musubi-browser CLI with interactive and script modes
- Add Claude Code skill definition (browser-agent.md)
- Add comprehensive test suite (67 tests)

Closes REQ-P1-001

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "musubi-workflow": "bin/musubi-workflow.js",
     "musubi-remember": "bin/musubi-remember.js",
     "musubi-resolve": "bin/musubi-resolve.js",
-    "musubi-convert": "bin/musubi-convert.js"
+    "musubi-convert": "bin/musubi-convert.js",
+    "musubi-browser": "bin/musubi-browser.js"
   },
   "scripts": {
     "test": "jest",
@@ -59,7 +60,8 @@
     "fs-extra": "^11.3.2",
     "glob": "^10.5.0",
     "inquirer": "^9.0.0",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "playwright": "^1.40.0"
   },
   "devDependencies": {
     "eslint": "^8.50.0",
