Phase 3 Sprint 3.1: Orchestration Core
- Add OrchestrationEngine with ExecutionContext
- Add PatternRegistry with metadata management
- Implement SequentialPattern for linear skill execution
- Implement AutoPattern for intelligent skill selection
- Add musubi-orchestrate CLI (run, auto, sequential, list-patterns, list-skills, status)
- Add 144 comprehensive tests (all passing)
- Total tests: 942

Sprint 3.1 deliverables:
- Core engine for pattern execution
- Pattern registry and metadata
- Sequential and Auto patterns
- CLI commands for orchestration

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "musubi-resolve": "bin/musubi-resolve.js",
     "musubi-convert": "bin/musubi-convert.js",
     "musubi-browser": "bin/musubi-browser.js",
-    "musubi-gui": "bin/musubi-gui.js"
+    "musubi-gui": "bin/musubi-gui.js",
+    "musubi-orchestrate": "bin/musubi-orchestrate.js"
   },
   "scripts": {
     "test": "jest",
