--- a/steering/project.yml
+++ b/steering/project.yml
@@ -1,8 +1,8 @@
 project_name: musubi-sdd
 description: >-
-  Ultimate Specification Driven Development Tool with 25 Agents for 7 AI Coding Platforms (Claude
+  Ultimate Specification Driven Development Tool with 27 Agents for 7 AI Coding Platforms + MCP Integration (Claude
   Code, GitHub Copilot, Cursor, Gemini CLI, Windsurf, Codex, Qwen Code)
-version: 3.0.0
+version: 3.5.0
 languages:
   - javascript
   - typescript
