docs: update documentation for v5.2.0-v5.3.0
- CHANGELOG.md: Add v5.3.0 multi-language support section
- README.md: Add What's New in v5.3.0 section
- docs/Qiita: Add Phase 15 (v5.2.0-v5.3.0) to evolution history
  - Language recommendation engine
  - 10 language support
  - ODS-RAM validation insights
  - Updated mermaid diagram and milestone table

--- a/steering/project.yml
+++ b/steering/project.yml
@@ -4,3 +4,10 @@ description: A software project using MUSUBI SDD
 locale: ja
 version: "0.1.0"
 created: 2025-12-10
+
+# Technology Stack
+tech_stack:
+  approach: multiple
+  languages:
+    - javascript
+    - python
