--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "js-yaml": "^4.1.0",
     "open": "^10.1.0",
     "playwright": "^1.40.0",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
     "eslint": "^8.50.0",
