--- a/.github/workflows/constitutional-governance.yml
+++ b/.github/workflows/constitutional-governance.yml
@@ -10,6 +10,11 @@ on:
     branches: [main]
   workflow_dispatch:
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 jobs:
   constitutional-validation:
     name: Constitutional Compliance Check
