--- a/.github/workflows/musubi-reusable.yml
+++ b/.github/workflows/musubi-reusable.yml
@@ -1,5 +1,10 @@
 name: MUSUBI Reusable Workflow
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 on:
   workflow_call:
     inputs:
