--- a/.github/workflows/traceability-check.yml
+++ b/.github/workflows/traceability-check.yml
@@ -21,6 +21,11 @@ on:
         required: false
         default: '80'
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 jobs:
   traceability:
     name: Traceability Validation
