--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -7,7 +7,7 @@
   "icon": "resources/icon.png",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nahisaho/musubi"
+    "url": "https://github.com/nahisaho/MUSUBI"
   },
   "license": "MIT",
   "engines": {
